--- a/Exception/Exception.csproj
+++ b/Exception/Exception.csproj
@@ -41,7 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\ExceptionConstant.cs" />
+    <Compile Include="Constants\UserConstant.cs" />
+    <Compile Include="InvalidSearchParameterException.cs" />
+    <Compile Include="InvalidTenantException.cs" />
+    <Compile Include="NullArgumentException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryStoreNotAccessibleException.cs" />
+    <Compile Include="TenantNotFoundException.cs" />
+    <Compile Include="User\DuplicateUserFoundException.cs" />
+    <Compile Include="User\InvalidUserException.cs" />
+    <Compile Include="User\UserNotFoundException.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
