--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "factory-wise",
-  "version": "0.0.0",
+  "name": "nis",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:ssr": "ng run UI:server:dev",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
