--- a/Exception/Exception.csproj
+++ b/Exception/Exception.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ConnectionStringNotFoundException.cs" />
     <Compile Include="Constants\ExceptionConstant.cs" />
+    <Compile Include="Constants\RoleConstant.cs" />
     <Compile Include="Constants\UserConstant.cs" />
     <Compile Include="InvalidEncryptedDataException.cs" />
     <Compile Include="InvalidSearchParameterException.cs" />
@@ -50,6 +51,9 @@
     <Compile Include="NullArgumentException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryStoreNotAccessibleException.cs" />
+    <Compile Include="Role\DuplicateRoleFoundException.cs" />
+    <Compile Include="Role\InvalidRoleException.cs" />
+    <Compile Include="Role\RoleNotFoundException.cs" />
     <Compile Include="TenantNotFoundException.cs" />
     <Compile Include="User\AlreadyUsedPasswordException.cs" />
     <Compile Include="User\DuplicateUserFoundException.cs" />
