--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -71,6 +71,7 @@
     <Compile Include="AssetRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="IRepository\IRoleRepository.cs" />
     <Compile Include="IRepository\IUserRepository.cs" />
     <Compile Include="NISDataContext.Context.cs">
       <AutoGen>True</AutoGen>
@@ -107,6 +108,7 @@
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
     <Compile Include="SQLRepository\SQLAzureUserRepository.cs" />
+    <Compile Include="SQLRepository\SQLRoleRepository.cs" />
     <Compile Include="StatementPageMapRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
