--- a/API/packages.config
+++ b/API/packages.config
@@ -18,7 +18,10 @@
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
@@ -31,4 +34,5 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
   <package id="Unity" version="5.11.7" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
 </packages>
