Seed Data Updated and API Changes

--- a/API/Web.config
+++ b/API/Web.config
@@ -4,7 +4,48 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings></appSettings>
+  <connectionStrings>
+    <!-- for QA Server -->
+    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
+
+    <!-- for PRD Server -->
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=NVIDYO-DEV;Initial Catalog=nvidyo;User ID=sa;Password=n4mat1ve#" />-->
+  </connectionStrings>
+  <appSettings>
+
+    <!--Login setup  -->
+    <add key="NewlyAddedUserMailSubject" value="nVidYo - User added" />
+    <add key="NewlyAddedUserMailMessage" value="Hello {0},&lt;br&gt;&lt;br&gt; Please click on below link to activate your account -&lt;br&gt;&lt;br&gt; {1}" />
+
+    <add key="UserForgotPasswordSubject" value="nVidYo - Reset password" />
+    <add key="UserForgotPasswordMessage" value="Hello {0},&lt;br&gt;&lt;br&gt; Please click on below link to reset your account -&lt;br&gt;&lt;br&gt; {1}" />
+
+    <add key="MailDisplayName" value="nVidYo Team" />
+    <add key="FromEmailAddress" value="nvidyo@n4mative.net" />
+    <add key="FromEmailAddressPassword" value="Gauch022" />
+    <add key="EnableSSL" value="true" />
+    <add key="SMTPServer" value="smtp.gmail.com" />
+    <add key="SMTPPort" value="587" />
+
+    <!-- for PRD Server -->
+    <!--<add key="ChangePasswordLink" value="http://n4mdev.n4mative.com:8040/#/confirmuser?token=" />-->
+
+    <!-- for QA Server -->
+    <add key="ChangePasswordLink" value="http://localhost:4200/#/confirmuser?token=" />
+
+    <!--Teanant setup  -->
+    <!-- for QA Server -->
+    <add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
+
+    <!-- for PRD Server -->
+    <!--<add key="TenantSQLStorageAccount" value="Data Source=NVIDYO-DEV;Initial Catalog=nvidyo;User ID=sa;Password=n4mat1ve#" />-->
+
+    <!--NodeJS-->
+    <add key="NodeJSAPIURL" value="http://192.168.100.7:3000/CreateDynamicVideo" />
+    <add key="ThreadCountStaticScene" value="1" />
+    <add key="ThreadCountDynamicScene" value="1" />
+    <add key="ThreadInterval" value="15" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
