--- a/API/packages.config
+++ b/API/packages.config
@@ -33,6 +33,7 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
-  <package id="Unity" version="5.11.7" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
+  <package id="Unity.Container" version="5.8.11" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
 </packages>
