--- a/Repository/packages.config
+++ b/Repository/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
-  <package id="Unity" version="5.11.7" targetFramework="net461" />
+  <package id="Unity" version="4.0.1" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
 </packages>
