--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -31,6 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -46,11 +58,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Unity.Abstractions, Version=5.11.6.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.5.11.7\lib\net46\Unity.Abstractions.dll</HintPath>
+    <Reference Include="Unity.Abstractions, Version=3.3.1.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.Abstractions.3.3.1\lib\net46\Unity.Abstractions.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Container, Version=5.11.8.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.5.11.7\lib\net46\Unity.Container.dll</HintPath>
+    <Reference Include="Websym.Core.ConfigurationManager.Exception, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\References\Configuration Manager\Websym.Core.ConfigurationManager.Exception.dll</HintPath>
     </Reference>
     <Reference Include="Websym.Core.ConfigurationManager.Manager">
       <HintPath>..\References\Configuration Manager\Websym.Core.ConfigurationManager.Manager.dll</HintPath>
@@ -58,8 +71,62 @@
     <Reference Include="Websym.Core.ConfigurationManager.Model">
       <HintPath>..\References\Configuration Manager\Websym.Core.ConfigurationManager.Model.dll</HintPath>
     </Reference>
+    <Reference Include="Websym.Core.ConfigurationManager.Repository, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\References\Configuration Manager\Websym.Core.ConfigurationManager.Repository.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.ConfigurationManager.Utility, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\References\Configuration Manager\Websym.Core.ConfigurationManager.Utility.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.EntityManager.Exception">
+      <HintPath>..\References\Entity Manager\Websym.Core.EntityManager.Exception.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.EntityManager.Manager">
+      <HintPath>..\References\Entity Manager\Websym.Core.EntityManager.Manager.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.EntityManager.Model">
+      <HintPath>..\References\Entity Manager\Websym.Core.EntityManager.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.EntityManager.Repository">
+      <HintPath>..\References\Entity Manager\Websym.Core.EntityManager.Repository.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.EntityManager.Utility">
+      <HintPath>..\References\Entity Manager\Websym.Core.EntityManager.Utility.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.EventManager.Exception">
+      <HintPath>..\References\Event Manager\Websym.Core.EventManager.Exception.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.EventManager.Manager">
+      <HintPath>..\References\Event Manager\Websym.Core.EventManager.Manager.dll</HintPath>
+    </Reference>
     <Reference Include="Websym.Core.EventManager.Model">
       <HintPath>..\References\Event Manager\Websym.Core.EventManager.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.EventManager.Repository">
+      <HintPath>..\References\Event Manager\Websym.Core.EventManager.Repository.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.EventManager.Utility">
+      <HintPath>..\References\Event Manager\Websym.Core.EventManager.Utility.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.ResourceManager.Model, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\References\Resource Manager\Websym.Core.ResourceManager.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.TenantManager.Exception">
+      <HintPath>..\References\Tenant Manager\Websym.Core.TenantManager.Exception.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.TenantManager.Manager">
+      <HintPath>..\References\Tenant Manager\Websym.Core.TenantManager.Manager.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.TenantManager.Model">
+      <HintPath>..\References\Tenant Manager\Websym.Core.TenantManager.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.TenantManager.Repository">
+      <HintPath>..\References\Tenant Manager\Websym.Core.TenantManager.Repository.dll</HintPath>
+    </Reference>
+    <Reference Include="Websym.Core.TenantManager.Utility">
+      <HintPath>..\References\Tenant Manager\Websym.Core.TenantManager.Utility.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -70,6 +137,7 @@
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
