User Add Edit  binding

--- a/API/Web.config
+++ b/API/Web.config
@@ -21,14 +21,14 @@
   <appSettings>
 
     <!--Login setup  -->
-    <add key="NewlyAddedUserMailSubject" value="nVidYo - User added"/>
+    <add key="NewlyAddedUserMailSubject" value="nIS - User added"/>
     <add key="NewlyAddedUserMailMessage" value="Hello {0},&lt;br&gt;&lt;br&gt; Please click on below link to activate your account -&lt;br&gt;&lt;br&gt; {1}"/>
 
-    <add key="UserForgotPasswordSubject" value="nVidYo - Reset password"/>
+    <add key="UserForgotPasswordSubject" value="nIS - Reset password"/>
     <add key="UserForgotPasswordMessage" value="Hello {0},&lt;br&gt;&lt;br&gt; Please click on below link to reset your account -&lt;br&gt;&lt;br&gt; {1}"/>
 
-    <add key="MailDisplayName" value="nVidYo Team"/>
-    <add key="FromEmailAddress" value="nvidyo@n4mative.net"/>
+    <add key="MailDisplayName" value="nIS Team"/>
+    <add key="FromEmailAddress" value="nis.n4mative@gmail.com"/>
     <add key="FromEmailAddressPassword" value="Gauch022"/>
     <add key="EnableSSL" value="true"/>
     <add key="SMTPServer" value="smtp.gmail.com"/>
