--- a/App/App.csproj
+++ b/App/App.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\confirm-user\confirm-user.component.ts" />
     <None Remove="ClientApp\src\app\layout\users\user.ts" />
     <None Remove="ClientApp\src\app\shared\modules\pagination\pagination.module.ts" />
   </ItemGroup>
