updated bootstrap-modal for dialog box error fix

--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
+    "@tomblue/ng2-bootstrap-modal": "^1.1.2",
     "angular-font-awesome": "^3.1.2",
     "angular-gridster2": "^8.2.0",
     "bootstrap": "^4.4.1",
@@ -37,14 +38,13 @@
     "moment": "^2.24.0",
     "ng-dynamic-component": "^5.0.0",
     "ng-pick-datetime": "^7.0.0",
-    "ng2-bootstrap-modal": "^1.0.1",
     "ngx-bootstrap": "^4.3.0",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^10.2.0",
     "ngx-ui-loader": "^7.2.2",
     "owl.carousel": "^2.3.4",
-    "rxjs": "~6.5.3",
+    "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
