User image changes

--- a/API/Web.config
+++ b/API/Web.config
@@ -35,10 +35,10 @@
     <add key="SMTPPort" value="587"/>
 
     <!-- for PRD Server -->
-    <!--<add key="ChangePasswordLink" value="http://n4mdev.n4mative.com:8040/confirmuser?token=" />-->
+    <add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />
 
     <!-- for QA Server -->
-    <add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token="/>
+    <!--<add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token="/>-->
 
     <!--Teanant setup  -->
     <!-- for QA Server -->
