--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -82,6 +82,7 @@
     <Compile Include="AssetRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="IRepository\IAssetLibraryRepository.cs" />
     <Compile Include="IRepository\IRoleRepository.cs" />
     <Compile Include="IRepository\IUserRepository.cs" />
     <Compile Include="NISDataContext.Context.cs">
@@ -118,6 +119,7 @@
     <Compile Include="ScheduleRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="SQLRepository\SQLAssetLibraryRepository.cs" />
     <Compile Include="SQLRepository\SQLAzureUserRepository.cs" />
     <Compile Include="SQLRepository\SQLRoleRepository.cs" />
     <Compile Include="StatementPageMapRecord.cs">
