--- a/Exception/Exception.csproj
+++ b/Exception/Exception.csproj
@@ -56,12 +56,14 @@
     <Compile Include="ConnectionStringNotFoundException.cs" />
     <Compile Include="Constants\AssetLibrary.cs" />
     <Compile Include="Constants\ExceptionConstant.cs" />
+    <Compile Include="Constants\PageConstant.cs" />
     <Compile Include="Constants\RoleConstant.cs" />
     <Compile Include="Constants\UserConstant.cs" />
     <Compile Include="InvalidEncryptedDataException.cs" />
     <Compile Include="InvalidSearchParameterException.cs" />
     <Compile Include="InvalidTenantException.cs" />
     <Compile Include="NullArgumentException.cs" />
+    <Compile Include="Page\DuplicatePageFoundException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryStoreNotAccessibleException.cs" />
     <Compile Include="Role\DuplicateRoleFoundException.cs" />
