--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="AssetLibraryManager.cs" />
     <Compile Include="AuthenticationManager.cs" />
+    <Compile Include="PageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleManager.cs" />
     <Compile Include="UserManager.cs" />
