--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -27,6 +27,7 @@
     "@tomblue/ng2-bootstrap-modal": "^1.1.2",
     "angular-font-awesome": "^3.1.2",
     "angular-gridster2": "^8.2.0",
+    "bn-ng-idle": "^1.0.1",
     "bootstrap": "^4.4.1",
     "core-js": "^2.6.11",
     "font-awesome": "^4.7.0",
