--- a/API/API.csproj
+++ b/API/API.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Container\UnityResolverService.cs" />
     <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Controllers\AssetLibraryController.cs" />
+    <Compile Include="Controllers\WidgetController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Filters\HandleExceptionFilter.cs" />
