--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AuthenticationManager.cs" />
     <Compile Include="PageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WidgetManager.cs" />
     <Compile Include="RoleManager.cs" />
     <Compile Include="UserManager.cs" />
   </ItemGroup>
